--- a/src/assets/scss/page/home.scss
+++ b/src/assets/scss/page/home.scss
@@ -1,3 +1,79 @@
-.aa{
- color: $primaryColorGreen;
+.home{
+    #bannersliderBoard{
+        overflow: hidden; 
+        height: 100vh;
+
+        #banner{
+            width: 100%;
+            height: 100vh;
+            position: relative;
+
+            li{
+                float: left;
+            }
+
+            .banner1{
+                width: 100%;
+                height: 100vh;
+                background-size: cover;
+                background-image: url(../image/banner_index.jpg);
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+            
+            .banner2{
+                width: 100%;
+                height: 100vh;
+                background-size: cover;
+                background-image: url(../image/banner_index2.jpg);
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+            
+            .banner3{
+                width: 100%;
+                height: 100vh;
+                background-size: cover;
+                background-image: url(../image/banner_index3.jpg);
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+
+            .banner4{
+                width: 100%;
+                height: 100vh;
+                background-size: cover;
+                background-image: url(../image/banner_index3.jpg);
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+
+            #bannerButton{
+                position: absolute;
+                bottom: 2vw;
+                left: 0;
+                right: 0;
+                text-align: center;
+                /* width: 100%; */
+                /* height: 50px; */
+
+                li{
+                    width: 1vw;
+                    height: 1vw;
+                    border-radius: 50%;
+                
+                    background-color: #ccc;
+                    display: inline-block;
+                    margin: 8px 8px 0 8px;
+                    box-shadow: 0 0 1vw rgba(0, 0, 0, 80);
+
+                    ＆:clicked{
+                        background-color: var(--orange-color);
+                    }
+                }
+            }
+        }
+
+
+    }
 }
