--- a/src/assets/scss/page/vote.scss
+++ b/src/assets/scss/page/vote.scss
@@ -2,13 +2,12 @@
 .vote_top{
   position: relative;
 
-}
-.vote_top .podium_img img{
+  .podium_img img{
     width: 170px;
     height: 170px;
+  }
 
-}
-.vote_top .banner {
+  .banner {
     background-image: url("/src/assets/images/vote/tree.svg");
     background-color: #f5efeb;
 
@@ -17,21 +16,26 @@
 
     background-repeat: no-repeat;
     background-position: bottom center;
-  }
-  .vote_top .banner .title {
-   color:$primaryColorGreen;
-   text-align: center;
-   line-height: 1.5;
-   padding-top: 43px;
-  }
-  .vote_top .banner .sheep {
-    position: absolute;
-    bottom: 0px;
-    left: 300px;
-    transform: scaleX(-1);
     
+    .title {
+      color:$primaryColorGreen;
+      text-align: center;
+      line-height: 1.5;
+      padding-top: 43px;
+    }
+    
+    .sheep {
+      position: absolute;
+      bottom: 0px;
+      left: 300px;
+      transform: scaleX(-1);
+
+      
+    }
   }
- 
+
+}
+
   .vote_top .podium_no{
     display: flex;
     flex-direction: row;
@@ -209,6 +213,7 @@
   align-items:center;
 
 padding-top: 198px;
+padding-bottom: 170px;
   position: relative;
 }
 .vote_button{
