看團專，主要回覆都在寫在code，如果有遺漏想問的可以再問

--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -97,10 +97,14 @@ footer{
         bottom: 2vw;
         left: 3.5vw;
         text-align: center;
-
-        a{
+        
+        button{
+            background-color: transparent;
+            outline: none;
+            border: none;
             color: $bgColorWhite;
             text-decoration: none;
+            cursor: pointer;
         }
 
         img{
