修改小龜老師的建議

--- a/src/assets/scss/page/park.scss
+++ b/src/assets/scss/page/park.scss
@@ -392,7 +392,7 @@ $time:10s;
                 img{
                     width: 100%;
                 }
-                p{
+                ul{
                     position: absolute;
                     top: 130px;
                     right: 55px;
