member page edit

--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -126,8 +126,8 @@ $Sidebar_icon_rigth: 70px;
     position: absolute;
     width: 8px;
     height: 8px;
-    bottom: 3px;
-    right: 3px;
+    bottom: 0.3vw;
+    right: 0.3vw;
   }
 }
 
